# tantivyr

./: .Rbuildignore  .gitignore  404.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  cran-comments.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  index.R  schema.R  search.R  tantivyr-package.R  utils.R  writer.R
articles/: index.html  index.md  tantivyr.html  tantivyr.md
man/: tantivy_version.Rd  tantivyr-package.Rd  tnt_add.Rd  tnt_commit.Rd  tnt_count.Rd  tnt_delete.Rd  tnt_field.Rd  tnt_index.Rd  tnt_index_df.Rd  tnt_index_info.Rd  tnt_num_docs.Rd  tnt_schema.Rd  tnt_search.Rd  tnt_stemmers.Rd  tnt_update.Rd
news/: index.html  index.md
reference/: index.html  index.md  tantivy_version.html  tantivy_version.md  tantivyr-package.html  tantivyr-package.md  tantivyr.html  tnt_add.html  tnt_add.md  tnt_commit.html  tnt_commit.md  tnt_count.html  tnt_count.md  tnt_date.html  tnt_delete.html  tnt_delete.md  tnt_field.html  tnt_field.md  tnt_index.html  tnt_index.md  tnt_index_df.html  tnt_index_df.md  tnt_index_info.html  tnt_index_info.md  tnt_num_docs.html  tnt_num_docs.md  tnt_schema.html  tnt_schema.md  tnt_search.html  tnt_search.md  tnt_stemmers.html  tnt_stemmers.md  tnt_update.html  tnt_update.md
src/: Makevars.in  Makevars.win.in  entrypoint.c  tantivyr-win.def
src/rust/: Cargo.toml  document.rs
src/rust/src/: analyzer.rs  lib.rs  schema.rs  stopwords.rs
tests/: testthat.R
(+10 files in other folders)
